# Bible-VerseFinder-AI

./: .gitignore  README.md  SETUP.md
backend/: pyproject.toml
backend/app/: __init__.py  main.py
backend/app/core/: config.py  vocabularies.py
backend/app/models/: __init__.py  schemas.py
backend/app/services/: __init__.py  cache.py  embeddings.py  query_classifier.py  search.py  summarizer.py  verse_reference.py
backend/app/services/llm/: __init__.py  base.py  factory.py  gemini_provider.py  grok_provider.py  openai_provider.py
backend/tests/: test_cache.py  test_query_classifier.py  test_rrf_fusion.py  test_search_lookup.py  test_verse_reference.py
backend/vector_store/bm25_index.bm25s/: data.csc.index.npy  params.index.json  vocab.index.json
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: ActionButtons.tsx  ChapterModal.tsx  DepthSelector.tsx  EmptyState.tsx  ErrorBanner.tsx  ExploreView.tsx  Header.tsx  ModeSelector.tsx  ResultsHeader.tsx  SearchBar.tsx  SkeletonCard.tsx  SummarizeView.tsx  VerseCard.tsx
frontend/src/hooks/: useAppState.ts  useChapter.ts  useFavorites.ts  useKeyboardShortcuts.ts  useSearch.ts  useSearchHistory.ts  useSummarize.ts
frontend/src/lib/: api.ts
frontend/src/pages/: HomePage.tsx  (+6 more)
scripts/: create_bm25_index.py  create_faiss_index.py  pyproject.toml  stopwords.py
scripts/source/: tempp.py
scripts/vector_store/: verse_metadata.json
scripts/vector_store/bm25_index.bm25s/: indices.csc.index.npy  indptr.csc.index.npy
(+9 files in other folders)
